[gd_scene load_steps=3 format=3 uid="uid://dn4xj6ohgbrmg"]

[ext_resource type="Script" uid="uid://dbubeeetedncx" path="res://Cenas/pause.gd" id="1_idnuk"]
[ext_resource type="Theme" uid="uid://d4lklfp575014" path="res://Assets/PreDefinicoes/FormatacaoBotao.tres" id="2_ddlpt"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_idnuk")

[node name="bg_overlay" type="ColorRect" parent="."]
offset_right = 801.0
offset_bottom = 600.0
color = Color(0.109804, 0.109804, 0.109804, 0.180392)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="Resume" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_ddlpt")
text = "RESUME"

[node name="Configuração" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_ddlpt")
text = "CONFIGURAÇÃO"

[node name="Button" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_ddlpt")
text = "SAIR"

[connection signal="pressed" from="menu_holder/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="menu_holder/Configuração" to="." method="_on_configuração_pressed"]
[connection signal="pressed" from="menu_holder/Button" to="." method="_on_button_pressed"]
